welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: not found: value vuBiscuit
while(vuBiscuit=true) {
      ^